src/app/components/tableview/dialogview/dialogview.component.css
.header-image {
    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
    background-size: cover;
  }

  .row-margin{
      margin-top: 1rem;
      margin-bottom: 1rem;
  }

  .imagegallery{
        height:300px;
      overflow-y: scroll;
  }

  .image-card{
      margin-bottom: .5rem;
      margin-right: -1.5rem;
  }

